2008-06-17  Tor Lillqvist  <tml@novell.com>

	* gtk/gtknotebook.c: Need to do the GTK_DISABLE_DEPRECATED
	#undef/#define dance here, too, because
	gtk_notebook_set_group_id() is deprecated but used here before it
	is defined, and gcc complains about conflicting type from the
	implicit int declaration when it sees the actual void definition.

	* modules/input/gtkimcontextime.h: Don't use the deprecated GTK_*
	GtkType macros.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/Makefile.am: build with GTK_DISABLE_DEPRECATED.

	* gtk/gtkclist.c
	* gtk/gtkcombo.c
	* gtk/gtkctree.c
	* gtk/gtklist.c
	* gtk/gtklistitem.c
	* gtk/gtkoldeditable.c
	* gtk/gtkpixmap.c
	* gtk/gtktext.c
	* gtk/gtktipsquery.c
	* gtk/gtktree.c
	* gtk/gtktreeitem.c: whenever we #undef GTK_DISABLE_DEPRECATED and
	actually use deprecated symbols (not just types or macros),
	#define it again before #include "gtkalias.h" so the symbols match
	and the beast links.

2008-06-17  Paolo Borelli  <pborelli@katamail.com>

	* gtk/tests/recentmanager.c: more tests for GtkRecentManager.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* modules/input/gtkimcontextmultipress.h
	* modules/input/gtkimcontextthai.h
	* modules/input/gtkimcontextxim.h: use G_TYPE instead of GTK_CHECK
	type checking macros.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktypeutils.h: really move the GtkType typedef to an
	undeprecated section.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktypeutils.h: deprecate GTK_CHECK_CAST,	GTK_CHECK_CLASS_CAST,
	GTK_CHECK_GET_CLASS, GTK_CHECK_TYPE and GTK_CHECK_CLASS_TYPE.
	Move the GtkType typedef to an undeprecated section.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprogress.h: use G_TYPE macros for type checking instead
	of GTK_CHECK ones because it's the parent class of an undeprecated
	class and the GTK_CHECK stuff will soon be deprecated.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilesel.c
	* gtk/gtkinputdialog.c